<resources>
    <string name="app_name">Бомбила</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="Bombila">Бомбила</string>
    <string name="Otkuda">Откуда</string>
    <string name="Kuda">Куда</string>
    <string name="Ontime">Предварительный</string>
    <string name="PS">Примечание</string>
    <string name="Cost">Сумма</string>
    <string name="CallTaxi">Заказать такси</string>
    <string name="OrderClose">Закрыть заказ</string>
    <string name="OrderDelete">Отказ от заказа</string>
    <string name="call_taxi">Вызов такси</string>
    <string name="exit_from_app">Выход из приложения</string>
    <string name="Scarga">ФОНАРЬ\n(водитель не приехал)</string>
</resources>
