<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Bombila"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#5bcdfd" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#5bcdfd" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_status_white" />
    </LinearLayout>

    <View
        android:id="@+id/vHeader"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/llHeader"
        android:background="@color/common_plus_signin_btn_text_dark_disabled" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vHeader"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Otkuda"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <ImageView
                        android:id="@+id/iv0"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_delete" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_plus_signin_btn_text_dark_disabled" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Kuda"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <ImageView
                        android:id="@+id/iv1"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_delete" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_plus_signin_btn_text_dark_disabled" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Kuda"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <ImageView
                        android:id="@+id/iv2"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_delete" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_plus_signin_btn_text_dark_disabled" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Kuda"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <ImageView
                        android:id="@+id/iv3"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_delete" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_plus_signin_btn_text_dark_disabled" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/Kuda"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_delete"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvOnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/common_plus_signin_btn_text_light_default"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/Ontime"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <LinearLayout
                android:id="@+id/llOnTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTextOnTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:id="@+id/ivOnTime"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_clear" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/common_plus_signin_btn_text_light_default"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/PS"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <LinearLayout
                android:id="@+id/llPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvTextPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/ivPS"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_clear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="5dp">

                <ProgressBar
                    android:id="@+id/pb"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Cost"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvScarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/common_plus_signin_btn_text_light_default"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:visibility="gone"
                android:text="@string/Scarga"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvCallTaxi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/common_plus_signin_btn_text_light_default"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/CallTaxi"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <TextView
        android:id="@+id/tvOrderClose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/common_plus_signin_btn_text_light_default"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone"
        android:text="@string/OrderClose"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <TextView
        android:id="@+id/tvOrderDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/common_plus_signin_btn_text_light_default"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone"
        android:text="@string/OrderDelete"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
</RelativeLayout>